--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@japa/plugin-adonisjs": "^4.0.0",
     "@japa/runner": "^4.2.0",
     "@swc/core": "1.11.24",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/luxon": "^3.6.2",
     "@types/node": "^22.15.18",
     "eslint": "^9.26.0",
@@ -58,6 +59,7 @@
     "@adonisjs/validator": "^13.0.2",
     "@vinejs/vine": "^3.0.1",
     "argon2": "^0.43.1",
+    "jsonwebtoken": "^9.0.2",
     "luxon": "^3.7.1",
     "mysql2": "^3.14.2",
     "reflect-metadata": "^0.2.2"
